--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <main>
     <section class="order-card-section">
       <div class="image-container">
-        <img class="image-header" src="images/illustration-hero.svg">
+        <img class="image-header" src="images/illustration-hero.svg" alt="page hero illustration">
       </div>
       <div class="container">
         <h1 class="order-summary-title">Order Summary</h1>
@@ -63,7 +63,6 @@
         <p class="cancel-text">Cancel Order</p>
       </div>
     </section>
-    <!-- </div> -->
   </main>
 
 
